# Oni

./: .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
fixtures/tinyrepo/: README.md  app.py  pyproject.toml
fixtures/tinyrepo/core/: engine.py  helpers.py
fixtures/tinyrepo/tests/: test_engine.py
oni/: __init__.py  acquire.py  adopt.py  cli.py  fingerprint.py  graphmap.py  jewels.py  llm.py  narrative.py  pipeline.py  report.py  util.py
tests/: test_oni.py
