[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-re"
version = "0.1.0"
description = "A clean-room, source-level reverse-engineering engine: tear a repo down to the patterns worth rebuilding."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "AkuchiS" }]
keywords = ["reverse-engineering", "repo-map", "code-analysis", "pagerank", "teardown", "clean-room", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
    "Intended Audience :: Developers",
]
dependencies = []  # stdlib only — that's the whole point

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
oni = "oni.cli:main"

[project.urls]
Homepage = "https://github.com/AkuchiS/oni"
Source = "https://github.com/AkuchiS/oni"

[tool.setuptools]
packages = ["oni"]

[tool.setuptools.package-data]
oni = []
